test/parse/fail/parenDedent.em
# De-indent attempts to cross parenthesis boundary
# Expect failure

One two
	three four (
		five
	six)